Added local directory to test permission setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - db
     volumes:
       - .:/code
+      - ../Sites/entree:/Users/david/Sites/entree
+    privileged: true
   db:
     image: orchardup/mysql
     ports:
