Enabled SSI Legacy parsing

--- a/docker/httpd.conf
+++ b/docker/httpd.conf
@@ -1,6 +1,7 @@
 ServerName garp3-docker-development
 #LoadModule rewrite_module libexec/apache2/mod_rewrite.so
 DocumentRoot "/var/www/html/public"
+SSILegacyExprParser on
 
 #<VirtualHost *:80>
 #    ServerName garp3-docker-development 
