--- a/Dockerfile.php7
+++ b/Dockerfile.php7
@@ -7,6 +7,7 @@ ENV APPLICATION_ENV=development
 ENV TERM linux
 # Add PHP Composer path to current path
 ENV PATH $PATH:./vendor/bin:/home/scripts/
+ENV COMPOSER_ALLOW_SUPERUSER 1
 
 ADD docker/config/php.ini /usr/local/etc/php/
 ADD docker/config/httpd.conf /etc/apache2/apache2.conf
